<resources>
    <string name="app_name">家庭账本</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="exit">退出应用</string>
    <string name="notification_center">信息中心</string>

    <string name="loginHint">点击头像登录</string>

    <string name="home_page">首页</string>
    <string name="chart">情况概要</string>
    <string name="budget">预算设置</string>
    <string name="account_water">流水清单</string>
    <string name="account">账户源</string>
    <string name="add_user">多人记录</string>
    <string name="logout">注销用户</string>

    <string name="record">快速记账</string>

    <string name="income_lbl">本月收入</string>
    <string name="expend_lbl">本月支出</string>
    <string name="balance_lbl">预算余额</string>

    <string name="recent_lbl">本周记录</string>

    <!--LoginAndRegistryActivity-->
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_btn_text">登录</string>
    <string name="login_btn_registry">没有账号？去注册呗</string>
    <string name="topic">welcome</string>
    <string name="reg_username_hint">请输入用户名</string>
    <string name="reg_password_hint">请输入密码</string>
    <string name="reg_passwordConfirm_hint">重复密码</string>
    <string name="reg_btn_text">注册</string>

    <!--记录页面-->
    <string name="quick_add">快速记账</string>
    <string name="classify">分类</string>
    <string name="amount">金额</string>
    <string name="rmb">CNY</string>
    <string name="description">描述</string>
    <string name="role">家庭成员</string>
    <string name="add_date">记录日期</string>
    <string name="add_creditor">添加债权人</string>
    <string name="add_debtor">添加债务人</string>

    <string-array name="home_page_spinner">
        <item>最近一周</item>
        <item>最近一月</item>
        <item>最近三个月</item>
        <item>自定义</item>
    </string-array>

    <string-array name="money_source">
        <item>现金</item>
        <item>银行卡</item>
        <item>支付宝</item>
    </string-array>

    <string-array name="role_default">
        <item>本人</item>
        <item>父母</item>
        <item>老公</item>
        <item>老婆</item>
        <item>子女</item>
    </string-array>
</resources>
