<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:checked="true"
            android:icon="@mipmap/ic_home_grey600_48dp"
            android:title="@string/home_page" />

        <item
            android:id="@+id/chart"
            android:icon="@mipmap/ic_poll_grey600_48dp"
            android:title="@string/chart" />

        <item
            android:id="@+id/budget"
            android:icon="@mipmap/ic_assignment_grey600_48dp"
            android:title="@string/budget" />
    </group>


    <item android:title="更多">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="@string/logout" />
            <item
                android:id="@+id/settings"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>