<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.accountbook.view.activity.MainActivity">
    <item
        android:id="@+id/notification"
        android:icon="@mipmap/ic_notifications_grey600_24dp"
        android:orderInCategory="90"
        android:title="@string/notification_center"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>