<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_username_hint"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="@dimen/edit_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/edit_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_passwordConfirmWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_passwordConfirmInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_passwordConfirm_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/edit_size" />
        </android.support.design.widget.TextInputLayout>

        <com.accountbook.view.customview.ProgressButton
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="@dimen/dp16"
            app:btn_text="@string/reg_btn_text" />
    </LinearLayout>
</ScrollView>
