<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.accountbook.view.customview.DateTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textColor="@color/black100"
                    android:textSize="@dimen/sp50"
                    android:textStyle="bold"
                    app:date_type="month" />

                <com.accountbook.view.customview.DateTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / 2016"
                    android:textSize="@dimen/sp25"
                    app:date_type="year" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/dp16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_lbl"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/income_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:text="500"
                        android:textColor="@color/income"
                        android:textSize="@dimen/sp24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expend_lbl"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/expend_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:text="300"
                        android:textColor="@color/expend"
                        android:textSize="@dimen/sp24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/dp16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance_lbl"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:id="@+id/balance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp8"
                        android:text="200"
                        android:textColor="@color/black100"
                        android:textSize="@dimen/sp24" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/status_hint_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="这个月的预算还很充裕，放心使用^ ^ "
                android:textColor="@color/black100"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:text="@string/recent_lbl"
        android:textStyle="bold" />
</LinearLayout>

