<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_clear_white600_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp16"
            android:paddingRight="@dimen/dp16"
            android:paddingBottom="36dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/money_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_attach_money_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp16"
                    android:layout_toRightOf="@id/money_icon">

                    <EditText
                        android:id="@+id/money_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/amount" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/money_type_text"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/rmb" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/description_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_create_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp16"
                    android:layout_toRightOf="@id/description_icon">

                    <EditText
                        android:id="@+id/description_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>


    </android.support.design.widget.AppBarLayout>

    <com.accountbook.view.customview.AutoHideFab
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:src="@mipmap/ic_done_white_24dp"
        app:borderWidth="0dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="right|bottom|end" />
</android.support.design.widget.CoordinatorLayout>